--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogt</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>Blog-by Aman</title>
 </head>
 <body>
-    <h1>created</h1>
+    
+    <nav class="navbar navbar-dark bg-primary mb-4">
+        <div class="container">
+            <a class="navbar-brand" href="#">Blog</a>
+        </div>
+    </nav>
+    <div class="container">
+        <ul class="nav nav-pills">
+            <li class="nav-item "><a href="#" class="nav-link active">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+        </ul>
+    </div>
+    <hr>
+    <div class="container text-center">
+        <h3>Hello visitors,</h3>
+        <p>Welcome to this blog...</p>
+        <br>
+        <h3 class="text-warning">This site is under construction...</h3>
+    </div>
+
+    
+    <footer class="page-footer  bg-dark fixed-bottom text-white py-2">
+        <div class="footer-copyright text-center "><small>© 2020 Copyright: www.pollster.com |
+            <span class="font-italic">By - Aman Soni</span></small>
+        </div>
+    </footer>
 </body>
 </html>
