--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,7 +10,7 @@
     
     <nav class="navbar navbar-dark bg-primary mb-4">
         <div class="container">
-            <a class="navbar-brand" href="#">Blog</a>
+            <a class="navbar-brand font-weight-bold" href="#">Blog</a>
         </div>
     </nav>
     <div class="container">
@@ -26,20 +26,24 @@
         <p>Welcome to this blog...</p>
         <br>
         <h4 class="text-warning">This site is under construction...</h4><br><br>
+
+
         {% for post in posts %}
-            <div class="card mb-4">
+            <div class="card mb-5 shadow">
                 <div class="cardbody p-3">
-                    <small class="float-left">published : {{post.published_date}}</small><br>
-                    <h3><a href="#">{{post.title}}</a></h3>
+                    <small class="float-left text-muted text-monospace">published : {{post.published_date}}</small><br>
+                    <h3 class="card-header text-info">{{post.title}}</h3>
                     <p class="text-justify">{{post.text}}</p>
                 </div>
             </div>
         {% endfor %}
+
+
     </div>
 
     
     <footer class="page-footer  bg-dark fixed-bottom text-white py-2">
-        <div class="footer-copyright text-center "><small>© 2020 Copyright: www.amansoni.pythonanywhere.com |
+        <div class="footer-copyright text-center "><small>© 2020 Copyright |
             <span class="font-italic">By - Aman Soni</span></small>
         </div>
     </footer>
