--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -10,7 +10,7 @@
                 <img class="aman shadow-lg rounded-circle" src="{% static 'author.jpg' %}"/>
         <br><br>
         <h4>HEllo, I am Aman soni</h4>
-        <h6>I hope you enjoyed reading this is blog. I know it's not as good, but still this is my first time making a blog. Hope I would improve further.</h6>
+        <h6>I hope you enjoyed reading this blog. I know it's not as good, but still this is my first time making a blog. Hope I would improve further.</h6>
         </div>
         <br><br><br><br>
 
