--- a/templates/blog/postblog.html
+++ b/templates/blog/postblog.html
@@ -4,15 +4,14 @@
     <div class="container text-center">
         <h3>Hello friends,</h3>
         <p>Welcome to this blog...</p>
-        <br>
-        <h4 class="text-warning">This website is under construction...</h4><br><br>
+        <br><br>
         
         {% for post in posts %}
-            <div class="card mb-5 shadow ">
+            <div class="card mb-5 shadow">
                 <div class="cardbody p-3">
                     <small class="float-left text-muted text-monospace">published : {{post.published_date}}</small><br>
                     <h3 class="card-header text-info">{{post.title}}</h3><br>
-                    <p class="text-justify">{{post.text}}</p>
+                    <p class="text-justify">{{post.text|linebreaksbr}}</p>
                 </div>
             </div>
         {% endfor %}
