--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -9,9 +9,10 @@
                 <h5>amansoni93744@gmail.com</h5>
                 <h6>+91 8529706987</h6>
                 <br>
-                <p class="text-secondary">You can contact me regarding any query or suggestions about this blog, I would love <span class="fa fa-heart"></span>  to have your opinions </p>
+                <p class="text-secondary">You can contact me regarding any query or suggestions about this blog, I would love <span class="fa fa-heart" style="color:red"></span> to have your opinions </p>
                 <br>
-                <h4 class="text-info">New web-apps will be alvaliable in near future </h4>
+                <h4 class="text-info">New web-apps will be available in near future </h4>
+                
         </div>
         
 {% endblock %}
