--- a/templates/weather/index.html
+++ b/templates/weather/index.html
@@ -19,11 +19,17 @@
       body {
         margin: 0;
         padding: 0;
+      }
+      .background {
         background-image: url("{% static 'background.jpg' %}");
         background-attachment: fixed;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
+        position: relative;
+        margin: 0;
+        padding: 0;
+        width: 100vw;
       }
       .weather_card {
         background: rgba(15, 82, 87, 0.3);
@@ -42,76 +48,101 @@
       footer {
         color: white;
         background-color: #55efc4;
-        background-image: linear-gradient(315deg, #55efc4 0%, #000000 74%);
+        background-image: linear-gradient(315deg, #55efc4 0%, #000000 80%);
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+      }
+      .fa {
+        padding: 20px;
+        font-size: 30px;
+        width: 30px;
+        text-align: center;
+        text-decoration: none;
+        margin: 5px 2px;
+        border-radius: 50%;
+      }
+
+      .fa:hover {
+        opacity: 0.7;
+      }
+
+      .fa-facebook-f {
+        background: #3b5998;
+        color: white;
+      }
+
+      .fa-instagram {
+        background: #88121c;
+        color: white;
       }
     </style>
   </head>
   <body>
-    <div class="row">
-      <div class="col-6">
-        <h1 class="display-4 m-3 p-2 text-white">
-          WE<strong class="text-success">A</strong>THER
-        </h1>
-      </div>
-    </div>
-    <div class="row m-3 p-2">
-      <form method="POST">
-        {% csrf_token %}
-        <div class="form-group row m-3 p-2">
-          {{ form.name }}
-          <button type="submit" class="btn">Add City</button>
-        </div>
-      </form>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        {% for city_weather in weather_data %}
-        <div class="weather_card text-white b-2 m-3 p-3">
-          <h2>{{ city_weather.city }}</h2>
-          <h3>
-            {{ city_weather.description }}
+    <div class="background">
+      <div class="container row">
+        <div class="col-6">
+          <h3 class="display-4 m-1 p-2 text-white">
+            WE<strong class="text-success">A</strong>THER
           </h3>
-          <img
-            src="http://openweathermap.org/img/w/{{ city_weather.icon }}.png"
-            alt="Image"
-          />
-          <h1>{{ city_weather.temperature }}° F</h1>
         </div>
-        {% endfor %}
       </div>
-    </div>
-    <!-- Footer -->
-    <footer class="page-footer font-small special-color-dark pt-4">
-      <!-- Footer Elements -->
-      <div class="container">
-        <!-- Social buttons -->
-        <ul class="list-unstyled list-inline text-center">
-          <li class="list-inline-item">
-            <a class="btn-floating btn-fb mx-1" href="facebook">
-              <i class="fa fa-facebook-f"> </i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn-floating btn-tw mx-1" href="instagram">
-              <i class="fa fa-instagram"> </i>
-            </a>
-          </li>
-        </ul>
-        <!-- Social buttons -->
+      <div class="row m-3 p-2">
+        <form method="POST">
+          {% csrf_token %}
+          <div class="form-group form-inline m-3 p-2">
+            {{ form.name }}
+            <button type="submit" class="btn">Add City</button>
+          </div>
+        </form>
       </div>
-      <!-- Footer Elements -->
+      <div class="container row">
+        <div class="col-md-6">
+          {% for city_weather in weather_data %}
+          <div class="weather_card text-white b-2 m-3 p-3">
+            <h2>{{ city_weather.city }}</h2>
+            <h3>
+              {{ city_weather.description }}
+            </h3>
+            <img
+              src="http://openweathermap.org/img/w/{{ city_weather.icon }}.png"
+              alt="Image"
+            />
+            <h1>{{ city_weather.temperature }}° F</h1>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+      <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+      <!-- Footer -->
+      <footer class="page-footer font-small special-color-dark pt-4">
+        <!-- Footer Elements -->
+        <div class="container">
+          <!-- Social buttons -->
+          <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
+              <a class="fa fa-facebook-f" href="facebook"> </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="fa fa-instagram" href="instagram"> </a>
+            </li>
+          </ul>
+          <!-- Social buttons -->
+        </div>
+        <!-- Footer Elements -->
 
-      <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">
-        © 2020 Copyright ||
-        <a href="amansoni.pythonanywhere.com/weather" class="text-white">
-          by : Aman</a
-        >
-      </div>
-      <div class="footer-copyright text-center py-3">
-        Email : amansoni93744@gmail.com
-      </div>
-      <!-- Copyright -->
-    </footer>
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">
+          © 2020 Copyright ||
+          <a href="amansoni.pythonanywhere.com/weather" class="text-white">
+            by : Aman</a
+          >
+        </div>
+        <div class="footer-copyright text-center py-3">
+          Email : amansoni93744@gmail.com
+        </div>
+        <!-- Copyright -->
+      </footer>
+    </div>
   </body>
 </html>
